# Tartip_MVP

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/core/: __init__.py  config.py
backend/tests/: test_health.py  test_reference_scripts.py
backend/tests/fixtures/reference/: fake_reference_dependencies.json  fake_reference_v1.json  fake_reference_v2.json
docs/: 07-reference-data-policy.md  acceptance-dashboard.md  acceptance-dashboard.yml  artifact-registry.yml  codex-working-context.md  decision-log.md  git-workflow.md  project-plan.md  project-state.yml  protected-artifact-change-requests.yml  status-report.md  traceability-matrix.md  user-action-dashboard.md  user-action-dashboard.yml  user-review-workbench.md  user-review-workbench.yml  verification-dashboard.md  verification-dashboard.yml
docs/audit/: README.md  (+5 more)
frontend/: index.html  package-lock.json  package.json
scripts/: apply_user_review_decisions.py  audit_codex_spec.py  audit_language_policy.py  backup_db.sh  check_project.sh  compare_reference_releases.py  compute_reference_hash.py  generate_acceptance_dashboard.py  generate_data_questions.py  generate_dissertation_prompts.py  generate_user_action_dashboard.py  generate_user_review_workbench.py  generate_verification_dashboard.py  reference_utils.py  restore_db.sh  sync_accepted_packet.py  validate_accepted_artifact_protection.py  validate_audit_reports.py  validate_data_contribution.py  (+12 more)
(+126 files in other folders)
